fix: fixed scrollbar in iOS safari

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,7 +32,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100dvh;
+  overscroll-behavior: none;
 }
 
 h1, h2, h3 {
